# Codename.Quadtris

./: Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
code/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.win  Quadtris  afhd.h  font.mxf.c  font.mxf.h  gl.cc  icon.rc  main.cc  msocket.h  quadtris.cc  quadtris.h  quadtris.icns  scores.h
code/.deps/: debug.Po  event.Po  font.Po  font.mxf.Po  joystick.Po  main.Po  parser.Po  quadtris.Po  system.Po  thread.Po  types.Po  video.Po
include/: cmx_video.h
